testdata/baselines/reference/submodule/compiler/typeArgumentsOnFunctionsWithNoTypeParameters.errors.txt
typeArgumentsOnFunctionsWithNoTypeParameters.ts(2,15): error TS2558: Expected 0 type arguments, but got 1.
typeArgumentsOnFunctionsWithNoTypeParameters.ts(3,15): error TS2345: Argument of type 'number' is not assignable to parameter of type 'T'.
typeArgumentsOnFunctionsWithNoTypeParameters.ts(4,15): error TS2558: Expected 0 type arguments, but got 1.
typeArgumentsOnFunctionsWithNoTypeParameters.ts(5,15): error TS2345: Argument of type 'null' is not assignable to parameter of type 'T'.


==== typeArgumentsOnFunctionsWithNoTypeParameters.ts (4 errors) ====
    function foo<T, U>(f: (v: T) => U) {
       var r1 = f<number>(1);
                  ~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
       var r2 = f(1);
                  ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'T'.
       var r3 = f<any>(null);
                  ~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
       var r4 = f(null);
                  ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'T'.
    }
    